// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListBoxMenuIcon should render 1`] = `
<ListBoxMenuIcon
  isOpen={true}
  translateWithId={[Function]}
>
  <button
    aria-label="Close"
    className="bx--list-box__menu-icon bx--list-box__menu-icon--open"
    type="button"
  >
    <ForwardRef(ChevronDown16)>
      <Icon
        fill="currentColor"
        height={16}
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <svg
          aria-hidden={true}
          fill="currentColor"
          focusable="false"
          height={16}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
          />
        </svg>
      </Icon>
    </ForwardRef(ChevronDown16)>
  </button>
</ListBoxMenuIcon>
`;

exports[`ListBoxMenuIcon should render 2`] = `
<ListBoxMenuIcon
  isOpen={false}
  translateWithId={[Function]}
>
  <button
    aria-label="Open"
    className="bx--list-box__menu-icon"
    type="button"
  >
    <ForwardRef(ChevronDown16)>
      <Icon
        fill="currentColor"
        height={16}
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <svg
          aria-hidden={true}
          fill="currentColor"
          focusable="false"
          height={16}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
          />
        </svg>
      </Icon>
    </ForwardRef(ChevronDown16)>
  </button>
</ListBoxMenuIcon>
`;
